# django-api

./: db.sqlite3  manage.py  pyproject.toml  serializer.py
loja/: admin.py  models.py  views.py
loja/migrations/: 0001_initial.py  0002_pedido.py  0003_auto_20230326_1533.py  0004_auto_20230326_1538.py
setup/: asgi.py  settings.py  urls.py  wsgi.py
